force-app/main/default/objects/DOZISF__JWT_Setting__mdt/DOZISF__JWT_Setting__mdt.object-meta.xml
<CustomObject>
    <label>JWT Setting</label>
    <pluralLabel>JWT Settings</pluralLabel>
</CustomObject>