force-app/main/default/objects/DOZISF__JWT_Setting__mdt/fields/DOZISF__Issuer__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Issuer__c</fullName>
    <label>Issuer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>