force-app/main/default/objects/DOZISF__JWT_Setting__mdt/fields/DOZISF__Private_Key__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Private_Key__c</fullName>
    <label>Private Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>