force-app/main/default/objects/DOZISF__JWT_Setting__mdt/fields/DOZISF__Subject__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Subject__c</fullName>
    <label>Subject</label>
    <length>100</length>
    <type>Text</type>
</CustomField>