force-app/main/default/objects/DOZISF__JWT_Setting__mdt/fields/DOZISF__User_Name__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__User_Name__c</fullName>
    <label>User Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>