force-app/main/default/objects/DOZISF__JWT_Setting__mdt/fields/DOZISF__Valid_Time__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__Valid_Time__c</fullName>
    <description>in seconds</description>
    <label>Valid Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>